# chaintrix

./: README.md  bigTODOs.md
chaintrix-frontend/: README.md  next.config.js  package-lock.json  package.json
chaintrix-frontend/components/: Background.tsx  ClosedGameView.tsx  Description.tsx  ErrorComponent.tsx  Game.tsx  GameBoard.module.css  GameBoard.tsx  GameFinished.tsx  GameInfoBanner.tsx  GameSelect.tsx  GameTileSpace.tsx  GameWrapper.tsx  GamesHistory.tsx  Hexagons.module.css  Home.module.css  HomePageLink.tsx  MovePhaseBanner.tsx  OponentsBanner.tsx  ReduxTesting.tsx  Rules.tsx  ScrollToTop.tsx  SmartContractTesting.tsx  SocketTesting.tsx  SolanaAndSocket.tsx
chaintrix-frontend/helpers/: Constants.tsx  HashConnectService.tsx  SocketMethods.tsx  ToastHelper.tsx
chaintrix-frontend/pages/: _app.tsx  index.tsx
chaintrix-frontend/store/: blockchainStateSlice.ts  counterSlice.ts  gameStateSlice.ts  hederaSlice.ts  socketSlice.ts  store.ts
chaintrix-frontend/styles/: globals.css
chaintrix-frontend/test/: Board.test.tsx
chaintrix-game-mechanics/: .gitignore  README.md  package-lock.json  package.json
chaintrix-hedera/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
chaintrix-socket-server/: .env  .gitignore  Anchor.toml  README.md  package-lock.json  package.json  tsconfig.json
chaintrix-solana/: .gitignore  Anchor.toml  README.md  local-deploy.sh  package.json
chaintrix-solana/programs/chaintrix-solana/: Cargo.toml
chaintrix-solana/programs/chaintrix-solana/src/: account.rs  context.rs  lib.rs
(+44 files in other folders)
