[package]
description = "Created with Anchor"
edition = "2018"
name = "chaintrix-solana"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "chaintrix_solana"

[features]
cpi = ["no-entrypoint"]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []

[dependencies]
anchor-lang = "0.23.0"
anchor-spl = "0.23.0"
spl-token = {version = "3.1.1", features = ["no-entrypoint"]}
